Fix issue with Starter Template theme session popup header on mobile, issue #317

--- a/themes/starter.designers/css/style.css
+++ b/themes/starter.designers/css/style.css
@@ -14007,6 +14007,7 @@
 
 .arlo#arlo .modal-title {
   float: left;
+  color: white;
 }
 
 .arlo#arlo .arlo-bootstrap-modal .event-presenters li:not(:empty):before {
